infra/k8s/clamav/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clamav
  namespace: cip-infra
  labels:
    app: clamav
spec:
  type: ClusterIP
  selector:
    app: clamav
  ports:
    - name: clamd
      protocol: TCP
      port: 3310
      targetPort: 3310
